_rendered/apps/step-ca/apps-statefulset-step-ca-step-certificates.yaml
# Source: step-ca/charts/step-certificates/templates/ca.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: step-certificates
  namespace: step-ca
  labels:
    helm.sh/chart: step-certificates-1.30.1
    app.kubernetes.io/name: step-certificates
    app.kubernetes.io/instance: step-ca
    app.kubernetes.io/version: "0.30.2"
    app.kubernetes.io/managed-by: Helm
spec:
  # Only one replica is supported at this moment
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: step-certificates
      app.kubernetes.io/instance: step-ca
  serviceName: step-certificates
  template:
    metadata:
      labels:
        app.kubernetes.io/name: step-certificates
        app.kubernetes.io/instance: step-ca
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: step-certificates
          image: "cr.smallstep.com/smallstep/step-ca:0.30.2"
          imagePullPolicy: IfNotPresent
          command: [ "/usr/local/bin/step-ca" ]
          args: [
            "--password-file", "/home/step/secrets/passwords/password",
            "/home/step/config/ca.json"
          ]
          workingDir: /home/step
          ports:
            - name: https
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /health
              port: 9000
              scheme: HTTPS
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /health
              port: 9000
              scheme: HTTPS
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
          - name: certs
            mountPath: /home/step/certs
            readOnly: true
          - name: config
            mountPath: /home/step/config
            readOnly: true
          - name: secrets
            mountPath: /home/step/secrets
            readOnly: true
          - name: ca-password
            mountPath: /home/step/secrets/passwords
            readOnly: true
          - name: database
            mountPath: /home/step/db
            readOnly: false
      volumes:
      - name: certs
        configMap:
          name: step-certificates-certs
      - name: config
        configMap:
          name: step-certificates-config
      - name: secrets
        secret:
          secretName: step-certificates-secrets
      - name: ca-password
        secret:
          secretName: step-certificates-ca-password
      
  volumeClaimTemplates:
  - metadata:
      name: database
      labels:
        app.kubernetes.io/name: step-certificates
        app.kubernetes.io/instance: step-ca
        app.kubernetes.io/managed-by: Helm
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "100Mi"
      storageClassName: "longhorn"
