_rendered/apps/step-ca/service-step-ca-step-certificates.yaml
# Source: step-ca/charts/step-certificates/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: step-certificates
  namespace: step-ca
  labels:
    helm.sh/chart: step-certificates-1.30.1
    app.kubernetes.io/name: step-certificates
    app.kubernetes.io/instance: step-ca
    app.kubernetes.io/version: "0.30.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    lbipam.cilium.io/ips: 10.0.4.8
spec:
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 9000
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: step-certificates
    app.kubernetes.io/instance: step-ca
