_rendered/apps/step-ca/cilium_io-ciliumnetworkpolicy-step-ca-preset-cnp.yaml
---
# Source: step-ca/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: step-ca-preset-cnp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cert-manager
    - fromCIDR:
        - 10.0.0.0/20
        - fda0:f54f:5876::/48
  egress:
    - toEndpoints:
        - {}
    - toCIDR:
        - 10.0.0.0/20
        - fda0:f54f:5876::/48
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - 
      toEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: traefik
      toPorts:
      - ports:
        - port: "8000"
          protocol: TCP
        rules:
          http:
          - method: GET
            path: ^/.well-known/acme-challenge/.*
